# portuni

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
client/: Cargo.toml  README.md
client/assets/mesh/: drone.gltf
client/assets/prefab/: scene.ron
client/assets/ui/: main.ron
client/config/: config.ron  display.ron
client/src/: app.rs  cobs_buffer.rs  compass.rs  config.rs  main.rs  serial.rs  transceiver.rs  usbreader.rs
client/src/state/: app.rs  mod.rs
client/src/system/: mod.rs  transceiver.rs  ui.rs
client/src/systems/: drone.rs  mod.rs  transceiver_system.rs  ui.rs
client/src/utils/: interp.rs  mod.rs
embedded/: Cargo.toml  README.md  openocd.gdb
embedded/src/: main.rs
src/: cobs_buffer.rs  serial.rs  usbreader.rs
transceiver/: send.ino
